docs/book/samples/ch07/entry_check.out
error[syntax]: a top-level line must begin with `fn`, `type`, or a constant binding
  --> entry_check.kso:1:1
   1 | print "hello from the top level"
       ^
