docs/book/samples/ch07/entry_check.kso
print "hello from the top level"
